--- a/pd-infocore/package.json
+++ b/pd-infocore/package.json
@@ -16,6 +16,7 @@
     "firebase-admin": "^9.4.2",
     "framer-motion": "^3.2.1",
     "next": "10.0.5",
+    "pino": "^6.11.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "swr": "^0.4.0"
