--- a/pd-infocore/package.json
+++ b/pd-infocore/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^3.2.1",
     "next": "10.0.5",
     "pino": "^6.11.0",
+    "pino-logflare": "^0.3.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "swr": "^0.4.0"
